--- a/app/views/organized/bikes/new_iframe.html.haml
+++ b/app/views/organized/bikes/new_iframe.html.haml
@@ -10,7 +10,7 @@
   /   .control-group
   /     = f.label :parking_notification_kind, "Kind of abandoned record" class: "control-label"
   /     .controls
-  /       = f.select(:parking_notification_kind, AbandonedRecord.kinds, prompt: "Choose kind")
+  /       = f.select(:parking_notification_kind, ParkingNotification.kinds, prompt: "Choose kind")
   .input-group
     .control-group
       = f.label :serial_number, class: "control-label"
