--- a/app/views/bikes/edit_bike_details.html.haml
+++ b/app/views/bikes/edit_bike_details.html.haml
@@ -87,22 +87,23 @@
             .form-well-input
               = f.text_field :additional_registration, class: 'form-control'
 
-          .form-group.row.unnested-field.no-divider-row
-            = f.label :city, class: 'form-well-label'
-            .form-well-input
-              = f.text_field :city, class: 'form-control', required: true, placeholder: t(".city")
+          .related-fields.no-divider-row
+            .form-group.row.fancy-select-placeholder.unfancy
+              = f.label :country_id, class: 'form-well-label'
+              .form-well-input
+                = f.select :country_id, Country.select_options,
+                  { required: true, prompt: t(".choose_country") },
+                  { class: 'country-select-input form-control' }
+            .form-group.row
+              = f.label :city, class: 'form-well-label'
+              .form-well-input
+                = f.text_field :city, class: 'form-control', required: true, placeholder: t(".city")
 
-          .form-group.row.unnested-field.no-divider-row
-            = f.label :zipcode, class: 'form-well-label'
-            .form-well-input
-              = f.text_field :zipcode, class: 'form-control', required: true, placeholder: t(".zipcode")
+            .form-group.row
+              = f.label :zipcode, class: 'form-well-label'
+              .form-well-input
+                = f.text_field :zipcode, class: 'form-control', required: true, placeholder: t(".zipcode")
 
-          .form-group.row.unnested-field.no-divider-row.fancy-select
-            = f.label :country_id, class: 'form-well-label'
-            .form-well-input.fancy-select-placeholder.unfancy
-              = f.select :country_id, Country.select_options,
-                { required: true, prompt: t(".choose_country") },
-                { class: 'country-select-input form-control' }
 
           = render "shared/form_well_footer_save"
 
