--- a/app/views/users/_edit_root.html.haml
+++ b/app/views/users/_edit_root.html.haml
@@ -28,7 +28,7 @@
     .form-group.row.fancy-select.unfancy
       = f.label :country_id, class: "form-well-label" do
         = t(".address")
-      .form-well-input#stolen_record_us_id{ data: { usid: Country.united_states.id } }
+      .form-well-input#us_id_data{ data: { usid: Country.united_states.id } }
         = f.select(:country_id, Country.select_options, { prompt: t(".choose_country") }, { class: "country-select-input form-control" } )
     .form-group.row
       %label.form-well-label
