--- a/app/views/organized/parking_notifications/index.html.haml
+++ b/app/views/organized/parking_notifications/index.html.haml
@@ -33,11 +33,11 @@
     %thead.small-header.hidden-md-down
       %th.map-cell
       %th
-        = t(".recorded")
+        = t(".created")
         %small.convertTimezone
       %th=t(".bike")
       %th=t(".kind")
-      %th=t(".recorder")
+      %th=t(".by")
       %th=t(".impounded")
     %tbody
 
