--- a/app/views/organized/parking_notifications/show.html.haml
+++ b/app/views/organized/parking_notifications/show.html.haml
@@ -15,7 +15,7 @@
       %td= @parking_notification.user.display_name
     %tr
       %td Kind
-      %td= @parking_notification.kind.humanize
+      %td= @parking_notification.kind_humanized
     %tr
       %td= t(".bike")
       %td
