--- a/app/views/bikes/_organized_access_panel.html.haml
+++ b/app/views/bikes/_organized_access_panel.html.haml
@@ -208,25 +208,82 @@
 
     #newParkingNotificationFields.collapse{ class: (parking_notification_open ? "in" : "")  }
       %hr
-      - parking_notification_built unless @parking_notification.present?
-      - @parking_notification = ParkingNotification.new(bike_id: @bike.id, organization: organization)
-      - if parking_notification_built
+      - parking_notification_present = @parking_notification.present?
+      - @parking_notification ||= ParkingNotification.new(bike_id: @bike.id, organization: passive_organization, use_entered_address: false)
+      - unless parking_notification_present
         / We only want to assign is_repeat if creating a new parking notification
-        - @parking_notification.is_repeat = @parking_notification.likely_repeat
-        - @parking_notification.kind = @parking_notification.potential_repeat_record&.kind
+        - @parking_notification.is_repeat = @parking_notification.likely_repeat?
+        - @parking_notification.kind = @parking_notification.potential_initial_record&.kind
+        - @parking_notification.set_location_from_organization
 
       = form_for @parking_notification, url: organization_parking_notifications_path(organization_id: passive_organization) do |f|
         = f.hidden_field :bike_id
         = f.hidden_field :latitude, class: "parkingLocation-latitude"
         = f.hidden_field :longitude, class: "parkingLocation-longitude"
         = f.hidden_field :accuracy, class: "parkingLocation-accuracy"
-        .form-group
-          = f.label :notes, t(".parking_notification_bike_notes_html")
-          = f.text_area :notes, class: 'form-control'
-        .form-group
-          = submit_tag "Send parking notification", class: "btn btn-success parkingLocation-submit-btn", disabled: true
-          %span.less-strong.waitingOnLocationText
-            = t(".waiting_on_device_location")
+        .mt-4.text-center
+          - if @parking_notification.can_be_repeat?
+            .btn-group{ role: "group", "aria-label" => "Repeat notice", data: { toggle: "buttons" } }
+              %label.btn.btn-secondary{ class: (@parking_notification.is_repeat ? "" : "active") }
+                = f.radio_button :is_repeat, false
+                First notice
+              %label.btn.btn-secondary{ class: (@parking_notification.is_repeat ? "active" : ""), disabled: !@parking_notification.can_be_repeat? }
+                = f.radio_button :is_repeat, true
+                Follow up to
+                = pluralize @parking_notification.earlier_bike_notifications.count, "earlier notification"
+
+        .row.mt-4
+          .col-md-6
+            .form-group
+              = f.label :message, "Optional message to send to user"
+              = f.text_area :message, placeholder: "Optional", class: 'form-control'
+          .col-md-6
+            .form-group
+              %p{ style: "margin-bottom: 0;" } Notification Kind
+              - passive_organization.parking_notification_kinds.each do |kind|
+                %label.radio-inline.mr-2
+                  = f.radio_button :kind, kind
+                  = ParkingNotification.kinds_humanized[kind.to_sym]
+
+        .form-group.text-center.mt-4
+          = submit_tag "Create parking notification", class: "btn btn-success parkingLocation-submit-btn", disabled: true
+
+        .row.mt-4
+          .col-md-6#choseLocationMethod
+            %span.less-strong.waitingOnLocationText.hideOnLocationFind.collapse.in
+              = t(".waiting_on_device_location")
+            .use-entered-address-radios.showOnLocationFind.collapse.mb-2
+              .radio
+                %label
+                  = f.radio_button :use_entered_address, false
+                  Use current location
+              .radio
+                %label
+                  = f.radio_button :use_entered_address, true
+                  Enter address manually
+
+            .address-fields.related-fields.collapse
+              .form-group.fancy-select.unfancy.ifManualRequired#us_id_data{ data: { usid: Country.united_states.id } }
+                = f.select(:country_id, Country.select_options,
+                  { prompt: t(".choose_country") },
+                  { class: 'country-select-input form-control' } )
+
+              .form-group.ifManualRequired
+                = f.text_field :street, placeholder: t(".address_or_intersection"), class: "form-control"
+
+              .form-group.ifManualRequired
+                = f.text_field :city, placeholder: t(".city"), class: "form-control"
+
+              .form-group
+                = f.text_field :zipcode, placeholder: t(".zipcode"), class: "form-control"
+
+              .form-group.fancy-select-placeholder.unfancy.hidden-other{ class: (@parking_notification.country_id == Country.united_states.id ? "unhidden" : "") }
+                = f.collection_select(:state_id, State.all, :id, :name, { include_blank: true, prompt: t(".state") }, { class: "form-control" })
+          .col-md-6
+            .form-group.less-strong
+              = f.label :internal_notes, t(".parking_notification_notes_html", org_name: passive_organization.short_name)
+              = f.text_area :internal_notes, class: "form-control"
+
 
 - if show_sticker_modal
   - sticker_modal_body = capture_haml do
